# myip

./: LICENSE  README.md  setup.cfg
src/myip/: __init__.py  __main__.py  api.py
tests/: test_myip.py
