[metadata]
name = myip-tjc
version = 0.0.1
author = TJC
author_email = tjc@tjc.im
description = A small utility to get the public IP of host
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tjcim
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
  requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  myip=myip:print_public_ip
